manage-acc page responsive

--- a/assets/css/manage-acc.css
+++ b/assets/css/manage-acc.css
@@ -217,6 +217,7 @@ input.form-control:focus {
 
     .formText {
         margin-top: 1.2rem !important;
+        padding: 0% !important;
     }
 
     .headText .back-btn-text {
