--- a/assets/css/preview.css
+++ b/assets/css/preview.css
@@ -81,7 +81,8 @@ nav .user-img {
 }
 
 .sub-heading h6 {
-    font-family: 'Lato-Medium';
+    /* font-family: 'Lato-Medium'; */
+    font-weight: 600;
     color: #2A2A2A;
     letter-spacing: 0.32px;
     margin-top: 10px;
