--- a/assets/css/selection-page.css
+++ b/assets/css/selection-page.css
@@ -60,7 +60,8 @@ nav .user-img {
 
 /* form starts here  */
 .formText {
-    margin-top: 25px;
+    /* margin-top: 25px; */
+    margin-top: 105px
 }
 
 .formText h2 {
