--- a/assets/css/request-access.css
+++ b/assets/css/request-access.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat+Alternates:wght@300;400;500;600;700;800;900&display=swap');
 * {
-    font-family: 'Lato','Lato-Medium', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 @font-face {
