dynamic upload images

--- a/assets/css/manage-acc.css
+++ b/assets/css/manage-acc.css
@@ -201,6 +201,10 @@ input.form-control:focus {
     .formText {
         margin-top: 1.2rem !important;
     }
+
+    .foot {
+        position: static;
+    }
 }
 
 @media (max-width: 540px) {
