--- a/assets/css/upload-image.css
+++ b/assets/css/upload-image.css
@@ -199,7 +199,7 @@ p {
 
 
 /* upload-file-1 */
-.upload-file-1 button {
+.browse-btn {
     color: #333;
     font-size: 12px;
     padding: 10px 30.5px;
@@ -238,6 +238,58 @@ p {
     padding: 10px 5px 80px 5px;
     border: 1px dashed #333;
     margin-right: 15px;
+}
+
+/* modal */
+
+.modal-cont {
+    padding: 15px 30px;
+    gap: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 31, 63, 0.25);
+}
+
+.modal-cont h4 {
+    color: #001F3F;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.modal-cont>.modal-body {
+    color: #2A2A2A;
+    letter-spacing: 0.32px;
+}
+
+#confirm-yes {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 14px;
+    background-color: #0D429D;
+    padding: 10px 55px;
+    border-radius: 5px;
+    color: #fff;
+    border-color: #0D429D;
+    /* font-weight: 600; */
+}
+
+#confirm-no {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 14px;
+    padding: 10px 55px;
+    border-radius: 5px;
+    border-color: #0D429D;
+    color: #001F3F;
+}
+
+#confirm-no {
+    background-color: unset !important;
+    color: unset !important;
+}
+
+#confirm-yes:hover {
+    background-color: #0D429D;
+}
+
+.modal-footer {
+    gap: 4.063rem;
 }
 
 /* footer  */
@@ -280,56 +332,3 @@ p {
     }
 
 }
-
-
-/* 
-.dropdown {
-    margin-bottom: 20px;
-}
-
-.drop-btn {
-    color: #9D9D9D;
-    font-family: 'Lato-Medium';
-    font-size: 16px;
-    padding: 10px;
-    transition: ease-out 0.3s;
-    border-radius: 5px;
-    background: #FFF;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  }
-  
-.drop-btn:hover {
-    color: #9D9D9D;
-    box-shadow: 0px 2px 10px 0px rgba(150, 229, 255, 0.25) inset;
-}
-
-.drop-btn svg {
-    margin-left: 174px;
-}
-
-.bn2 svg {
-    margin-left: 153px;
-}
-
-
-.btn-check:checked + .btn, :not(.btn-check) + .btn:active, .btn:first-child:active, .btn.active, .btn.show {
-    color: #60A0D6;
-    background-color: unset;
-    border-color: unset;
-}
-
-
-.drop-menu {
-    border: none;
-    padding: 0;
-    min-width: 283px;;
-  }
-
-.itm {
-    margin-bottom: 2px;
-}
-
-.itm:hover {
-    color: #60A0D6;
-    border: 1px solid #60A0D6;
-} */
